Add Advent recommendation section with styling and visibility control

--- a/index.html
+++ b/index.html
@@ -102,6 +102,16 @@
         <p class="subtitle">Devoțional de Advent · John Piper</p>
       </header>
 
+      <section class="advent-recommendation">
+        <em>Acest devoțional</em> ne aduce înaintea unei descoperiri proaspete a
+        strălucirii Crăciunului. Ce eliberare pentru oameni grăbiți, ca fiecare
+        dintre noi, să se poată opri pentru 10 minute în fiecare zi de Advent și
+        să se gândească la Isus, Mântuitorul nostru – odihnindu-se, bucurându-se
+        și fiind înviorați!<br /><br />
+        <strong>Ray Ortlund</strong>, Păstor, Immanuel Church,<br />
+        Nashville, Tennessee
+      </section>
+
       <main id="app-content">
         <!-- Content will be dynamically loaded here -->
       </main>
